--- a/src/style/globals.scss
+++ b/src/style/globals.scss
@@ -2,3 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 @import "reset";
+
+.swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.swiper-slide {
+  display: flex;
+}
